@@ -315,6 +315,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15737) Fix notices while expanding using PPCustomFrame
 * (bug 15544) Non-index entry points cause the "Wiki not set up" message to
   have corrupt URLs
+* (bug 5101) Image from Commons doesn't show up when searched in Wikipedia search box
 
 === API changes in 1.14 ===
 
